unpackaged/main/default/objects/Account/fields/X24_Hour_Access__c.field-meta.xml
<CustomField>
    <fullName>X24_Hour_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>24 Hour Access</label>
    <type>Checkbox</type>
</CustomField>