unpackaged/main/default/objects/Account/fields/X2_Contact_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>X2_Contact_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label># 2 Contact at Insider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (#2 Contact at Insider)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>