unpackaged/main/default/objects/Account/fields/X3_Contact_at_Insider__c.field-meta.xml
<CustomField>
    <fullName>X3_Contact_at_Insider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label># 3 Contact at Insider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (# 3 Contact at Insider)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>