unpackaged/main/default/objects/Account/fields/YOLO__c.field-meta.xml
<CustomField>
    <fullName>YOLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YOLO</label>
    <type>Checkbox</type>
</CustomField>