unpackaged/main/default/objects/Account/fields/Zagat_Review__c.field-meta.xml
<CustomField>
    <fullName>Zagat_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Review/Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>