unpackaged/main/default/objects/Account/recordTypes/Client_Account.recordType-meta.xml
<RecordType>
    <fullName>Client_Account</fullName>
    <active>true</active>
    <description>Used for prospects and client records</description>
    <label>Client Account</label>
</RecordType>