unpackaged/main/default/objects/Account/recordTypes/Vendor_Account.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Account</fullName>
    <active>true</active>
    <description>Used for vendor records</description>
    <label>Vendor Account - Restaurant</label>
</RecordType>