unpackaged/main/default/objects/Account/recordTypes/Vendor_Account_Generic.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Account_Generic</fullName>
    <active>true</active>
    <label>Vendor Account - Generic</label>
</RecordType>