unpackaged/main/default/objects/Account/validationRules/Cannot_Edit_Frozen_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Frozen_Account</fullName>
    <active>true</active>
    <errorConditionFormula>!ISCHANGED(Account_Status__c) &amp;&amp;
ISPICKVAL(Account_Status__c, 'Frozen') &amp;&amp;
!ISNEW() &amp;&amp;
$User.CommunityNickname != 'CDNA' &amp;&amp;
$User.Edit_Locked_Accounts_Logbooks__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot edit a Frozen account.</errorMessage>
</ValidationRule>