unpackaged/main/default/objects/Account/validationRules/Cannot_Edit_Past_Client_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_Past_Client_Account</fullName>
    <active>false</active>
    <errorConditionFormula>!ISCHANGED(Account_Status__c) &amp;&amp;
ISPICKVAL(Account_Status__c, 'Past Client') &amp;&amp;
!ISNEW() &amp;&amp;
$User.CommunityNickname != 'CDNA' &amp;&amp;
$User.Edit_Locked_Accounts_Logbooks__c = FALSE</errorConditionFormula>
    <errorMessage>You cannot edit a Past Client account.</errorMessage>
</ValidationRule>