unpackaged/main/default/objects/Account/listViews/Accounts_with_and_without_24.listView-meta.xml
<ListView>
    <fullName>Accounts_with_and_without_24</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>X24_Hour_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client_Account</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Insider Client</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>notEqual</operation>
        <value>Prospect,Past Client,Frozen</value>
    </filters>
    <label>Accounts with and without 24</label>
</ListView>