unpackaged/main/default/objects/Account/listViews/All_Clients_Time_Overhours_MTD.listView-meta.xml
<ListView>
    <fullName>All_Clients_Time_Overhours_MTD</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Time_Logged_MTD_hours__c</columns>
    <columns>Billable_Time_Logged_MTD_hours__c</columns>
    <columns>Time_Overhours__c</columns>
    <columns>Owner__c</columns>
    <columns>Insider_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client_Account</value>
    </filters>
    <filters>
        <field>Time_Overhours__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Clients - Time Overhours MTD</label>
</ListView>