unpackaged/main/default/objects/Account/listViews/All_Vendors_Restaurant.listView-meta.xml
<ListView>
    <fullName>All_Vendors_Restaurant</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Cuisine__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>Owner__c</columns>
    <columns>Cancellation_Policy__c</columns>
    <columns>Reconfirmation_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Vendor_Account</value>
    </filters>
    <label>All Vendors - Restaurant</label>
</ListView>