unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Billing_Notes__c</columns>
    <columns>Notes__pc</columns>
    <columns>Notes_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Service</value>
    </filters>
    <filters>
        <field>PDR_Capacity__c</field>
        <operation>equals</operation>
        <value>Seated: 15 and under,Seated: 16-25,Seated: 26-50</value>
    </filters>
    <label>All Accounts</label>
</ListView>