unpackaged/main/default/objects/Account/listViews/Client_Accounts.listView-meta.xml
<ListView>
    <fullName>Client_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Primary_Contact__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Time_Logged_MTD_hours__c</columns>
    <columns>Billable_Time_Logged_MTD_hours__c</columns>
    <columns>Time_Overhours__c</columns>
    <columns>Owner__c</columns>
    <columns>Insider_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client_Account</value>
    </filters>
    <label>All Clients</label>
</ListView>