unpackaged/main/default/objects/Account/listViews/Clients.listView-meta.xml
<ListView>
    <fullName>Clients</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Next_Billing_Scheduled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Client_Account</value>
    </filters>
    <filters>
        <field>Account_Status__c</field>
        <operation>equals</operation>
        <value>Client</value>
    </filters>
    <label>Clients</label>
</ListView>